# orion-app-web

./: .editorconfig  .env  .env.example  .env.local  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .version  00_START_HERE.txt  ARCHITECTURE_PROPOSAL.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MISSION.md  PROFESSIONAL_EDITION.md  PROJECT_STATUS.txt  QUICK_START.md  README.dev.md  README.md  README_NATIVE.md  RELEASE.md  RESOURCES.md  SECURITY.md  SECURITY_AUDIT.md  VERSION.md  bun.lockb  capacitor.config.ts  components.json  env.ts  eslint.config.js  index.html  package-lock.json  package.json  route.ts  tailwind.config.ts  tall  (+2 more)
.github/workflows/: build-native.yml  ci.yml
backend/drf/: README.md
backend/keyvault/: index.ts
backend/node-integration/: Dockerfile  gateway.js  package.json
backend/python/: Dockerfile  example_ml.py  requirements.txt
dev-dist/: sw.js
docs/: ASSETS_PREPARATION.md  DEPLOYMENT_CHECKLIST.md  DEVOPS_SYNC.md  GOOGLE_OAUTH_SETUP.md  MOBILE_DEPLOYMENT.md  ORION_ROADMAP.md  QUICKSTART_NATIVE.md  RAG_MEMORY_SYSTEM.md  TAURI_DESKTOP_GUIDE.md
infra/azure/: main.tf
libs/cpp/validation/: CMakeLists.txt  Dockerfile  c_api.cpp  c_api.h  pybind.cpp  verify.cpp  verify.h  verify_cli.cpp
libs/cpp/validation/python_wrapper/: validate_ctypes.py
n8n/workflows/: send-daily-report.json
scripts/: clean-git-history.sh  git-sync-safe.mjs  git-sync-watch.mjs  remove-secrets.sh  replacements.txt  setup-git-hooks.sh
src/: App.css  App.tsx  index.css  main.tsx  viteEnv.ts
src/apis/: client.ts
src/components/: # Code Citations.md  AgentConfigModal.tsx  AgentSelector.tsx  AutoRoute.tsx  ChatInput.tsx  CodeBlockRenderer.tsx  ConsentBanner.tsx  ConversationItem.tsx  (+23 more)
supabase/: config.toml
tests/: ProfileEditor.test.tsx
(+123 files in other folders)
